--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/computer.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InnBlog</title>
+    <title>莹的网络日志</title>
   </head>
   <body>
     <div id="app"></div>
