feat: 增加 umami 数据埋点

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="19f0cdbd-3947-4b0d-b019-8f7fad30cb98"></script>
     <link rel="icon" type="image/x-icon" href="/computer.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>莹的网络日志</title>
